# review

./: README.md  pyproject.toml  ruff.toml  setup.py  update_requirements_linux.sh
.circleci/: config.yml
dev/: docker-compose.yml
dev/docker/windows-miniconda/: Dockerfile
dev/requirements/: base.in  python3.10.txt  python3.11.txt  python3.12.txt  python3.7.txt  python3.8.txt  python3.9.txt
mozphab/: commits.py  conduit.py  diff.py  environment.py  git.py  helpers.py  mercurial.py  mozphab.py  repository.py  updater.py  user.py
mozphab/commands/: patch.py  reorganise.py  self_update.py  submit.py
tests/: conftest.py  test_commit_parsing.py  test_conduit.py  test_helpers.py  test_integration_git.py  test_reorganise.py  test_sentry.py  test_style.py  test_submit.py  test_uplift.py  test_user.py
