[project]
name = "mozphab"
version = "1.1.0"
requires-python = "> = 3.7"
authors = [{name = "mozilla", email = "conduit-team@mozilla.com"}]
description = "phabricator review submission/management tool."
readme = "README.md"
license = {file = "LICENSE"}
include_package_data = true
dependencies = [
    "distro",
    "glean-sdk> = 50.0.1, =  = 50.*",
    "packaging",
    "python-hglib> = 2.6.2",
    "sentry-sdk> = 0.14.3",
    "setuptools",
]
package_data = {"mozphab": ["metrics.yaml", "pings.yaml"]}
packages = ["mozphab", "mozphab/commands"]
# note: please change the `updater.py::check_for_updates` method if the format
# would be different than > = x.y
url = "https://github.com/mozilla-conduit/review"
zip_safe = false

[project.scripts]
moz-phab = "mozphab.mozphab:run"
