# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[project]
name = "mozphab"
version = "1.1.0"
description = "Phabricator review submission/management tool."
# note: please change the `updater.py::check_for_updates` method if the format
# would be different than > = x.y
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "mozilla", email = "conduit-team@mozilla.com"}]
readme = "README.md"
url = "https://github.com/mozilla-conduit/review"
dependencies = [
    "distro",
    "glean-sdk>= 50.0.1,== 50.*",
    "packaging",
    "python-hglib>=2.6.2",
    "sentry-sdk>=0.14.3",
    # TODO can we get rid of this setuptools on pyproject??
    "setuptools",
]

# TODO the below entries in `project` are probably wrong.

# TODO Is this the right way to do package data?
package_data = {"mozphab": ["metrics.yaml", "pings.yaml"]}
packages = ["mozphab", "mozphab/commands"]

# TODO Is this right?
zip_safe = false

[project.scripts]
moz-phab = "mozphab.mozphab:run"
# TODO with setup.py this doesn't ship to users, only in development mode.
moz-phab-dev = "mozphab.mozphab:run_dev"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

# TODO use setuptools-scm
