# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[project]
name = "mozphab"
description = "Phabricator review submission/management tool."
# Note: please change the `updater.py::check_for_updates` method if the format
# would be different than `>=x.y`.
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Mozilla", email = "conduit-team@mozilla.com"}]
readme = "README.md"
# url = "https://github.com/mozilla-conduit/review"
dependencies = [
    "distro",
    "glean-sdk>=50.0.1,==50.*",
    "packaging",
    "python-hglib>=2.6.2",
    # `importlib.metadata` in stdlib since Python 3.8.
    "importlib-metadata; python_version < '3.8'",
    "sentry-sdk>=0.14.3",
    "setuptools",
]

dynamic = ["version"]

# TODO the below entries in `project` are probably wrong.

# TODO Is this the right way to do package data?
# package_data = {"mozphab" = ["metrics.yaml", "pings.yaml"]}


# TODO Is this right?
# zip_safe = false

[project.urls]
"Repository" = "https://github.com/mozilla-conduit/review"
"Bug Tracker" = "https://bugzilla.mozilla.org"

[project.scripts]
moz-phab = "mozphab.mozphab:run"
# TODO with setup.py this doesn't ship to users, only in development mode.
moz-phab-dev = "mozphab.mozphab:run_dev"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=7.0.5",
]

[tool.setuptools]
# May no longer be required:
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#package-discovery
packages = ["mozphab", "mozphab.commands"]

# Derive version number from version control.
[tool.setuptools_scm]


